Sprint 9 solution http api (#4)
* Финальный проект спринта 9

* Финальный проект спринта 9

* Финальный проект спринта 9 - исправил CodeStyle

* Финальный проект спринта 9 - исправил CodeStyle 2

* Финальный проект спринта 9 - исправил CodeStyle 3

* Финальный проект спринта 9 - убрал 2 импорта

* Финальный проект спринта 9 - убрал еще 3 импорта

* Финальный проект спринта 9 - убрал еще 4 импорта

* Финальный проект спринта 9 - исправил замечания